# repo-exporter

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  README.md  contributor_commits.csv  export_repos.py  gh_repo_exporter.py  hf_repo_exporter.py  pyproject.toml  requirements.txt
.github/: validate-zenodo.yaml
.github/workflows/: gh-repo-exporter.yml  hf-repo-exporter.yml  main.yml  pr-tests.yml  publish-to-pypi.yaml  validate-zenodo.yaml
src/repo_exporter/: __init__.py  __main__.py  base.py  github.py  huggingface.py  main.py
tests/: test_get_gh_repo_info_integration.py  test_get_hf_repo_info_integration.py  test_get_repo_info_integration.py  test_github.py  test_has_doi_for_repo.py  test_repo_core.py
tests/legacy/: test_get_hf_repo_info_integration.py  test_repo_core.py
tests/repo_exporter/: test_about_and_init.py  test_base.py  test_huggingface.py  test_main.py
